--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,20 +15,16 @@ nav {
   top: -100px;
 }
 
-
 nav a {
   float: left;
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 15px;
   text-decoration: none;
 }
 
 
 nav a:hover {
-  background-color: #ddd;
-  /*color: black;*/
   color: #ff5b4d;
   margin: 0;
 }
@@ -54,7 +50,29 @@ nav a:hover {
   margin: 0;
 }
 
+.hidden-icon {
+  height: 100%;
+  flex: 1;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 10px 10px 25px;
+  margin: 0;
+  display: none;
+}
+
 .nav-li:hover {
-  /*background*/: #848484;
   color: #ff5b4d;
+}
+
+@media only screen and (max-width: 480px) {
+  .nav-li {
+    display: none;
+  }
+
+  .hidden-icon {
+    float: left;
+    display: block;
+  }
 }
