--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -23,38 +23,25 @@ nav a {
   text-decoration: none;
 }
 
-
 nav a:hover {
   color: #ff5b4d;
   margin: 0;
 }
 
-.nav-ul {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-  float: left;
-  font-size: 1.15rem;
-}
-
 .nav-li {
   height: 100%;
-  flex: 1;
   text-align: center;
-  display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px 10px 10px 40px;
   transition: all 0.3s ease-in;
   margin: 0;
+  float: left;
 }
 
 .hidden-icon {
   height: 100%;
-  flex: 1;
   text-align: center;
-  display: flex;
   justify-content: center;
   align-items: center;
   padding: 10px 10px 10px 25px;
@@ -69,6 +56,22 @@ nav a:hover {
 @media only screen and (max-width: 480px) {
   .nav-li {
     display: none;
+  }
+
+  .responsive-nav {
+    float: none;
+    display: block;
+    text-align: left;
+    position: relative;
+    background-color: #333;
+    top: 40px;
+    padding-left: 25px;
+  }
+
+  .responsive-hamburger {
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 
   .hidden-icon {
