--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,14 +1,13 @@
 .title {
-  text-align: left;
+  text-align: center;
   font-size: 3rem;
-  padding-left:30%;
+  margin-right:30%;
 }
 
 .about-me {
-   text-align: left;
+   text-align: center;
    line-height: 160%;
-   padding-right: 5%;
-   padding-top: 2%;
+   margin-right: 30%;
 }
 
 .profile {
@@ -39,14 +38,21 @@
 
 .bar-graph-wrapper .skill {
   border-radius: 3px 0px 0px 3px;
-  padding-top: 2%;
+  padding-top: 1.5%;
   width: 20%;
   background-color:#296e89;
   color: white;
-  height: 100%;
   float:left;
   height: 45px;
   text-align:center;
+}
+
+.bar-graph-wrapper .percentage {
+  padding-right: 7px;
+  padding-top: 10px;
+  color: white;
+  float:right;
+  height: 45px;
 }
 
 .bar {
@@ -63,58 +69,63 @@
   float:left;
 }
 
-.bar-graph-wrapper .bar-one {
-  width: 75%;
-  animation: 5s anim-lightspeed-in ease forwards;
+[data-aos="anim-bar-one"] {
+    width: 0; 
 }
- 
-.bar-graph-wrapper .bar-two {
-  width: 60%;
+[data-aos="anim-bar-one"].aos-animate {
+    width: 70%;
+ }
+
+[data-aos="anim-bar-two"] {
+    width: 0; 
+}
+[data-aos="anim-bar-two"].aos-animate {
+    width: 60%;
 }
 
-.bar-graph-wrapper .bar-three {
-  width: 30%;
+[data-aos="anim-bar-three"] {
+    width: 0; 
+}
+[data-aos="anim-bar-three"].aos-animate {
+    width: 25%;
 }
 
-.bar-graph-wrapper .bar-four {
-  width: 20%;
+[data-aos="anim-bar-four"] {
+    width: 0; 
+}
+[data-aos="anim-bar-four"].aos-animate {
+    width: 15%;
 }
 
-.bar-graph-wrapper .bar-five {
-  width: 40%;
+[data-aos="anim-bar-five"] {
+    width: 0; 
+}
+[data-aos="anim-bar-five"].aos-animate {
+    width: 35%;
 }
 
-.bar-graph-wrapper .bar-six {
-  width: 50%;
+[data-aos="anim-bar-six"] {
+    width: 0; 
 }
-
-@keyframes anim-lightspeed-in {
-  0% {
-    transform: translateX(-200%);
-    opacity: 1;
-  }
-  100% {
-    transform: translateX(0);
-    opacity: 1;
-  }
+[data-aos="anim-bar-six"].aos-animate {
+    width: 50%;
 }
 
 @media only screen and (max-width: 800px) {
-  .title {
-    padding: 0px 0px 0px 0px;
-    text-align: center;
-  }
-
   .bar-graph-wrapper {
     width: 100%; 
   }
 }
 
 @media only screen and (max-width: 600px) {
+  .title {
+     margin-right: 0px;
+  }
+
   .about-me {
      text-align: center;
      line-height: 160%;
-     padding: 0px 0px 0px 0px;
+     margin-right: 0px;
   }
   
   .profile {
@@ -148,14 +159,14 @@
 /*iPad Pro*/
 @media only screen and (width: 1024px) and (height: 1366px) {
   .title {
-    padding: 0px 0px 0px 0px;
+    margin-right: 0px;
     text-align: center;
   }
 
   .about-me {
      text-align: center;
      line-height: 160%;
-     padding: 0px 0px 0px 0px;
+     margin-right: 0px;
   }
   
   .profile {
