--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -2,3 +2,38 @@
   text-align: center;
   font-size: 3rem;
 }
+
+.contact-wrapper {
+  display: block;
+  text-align: center;
+}
+
+.contact-form {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
+
+.generic-contact {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 4px;
+  resize: vertical;
+}
+
+.contact-button {
+  background-color: #64b2d1;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+}
+
+.contact-button:hover {
+  background-color:#296e89;
+}
