Changed About Section layout

--- a/src/components/Layout-Index.css
+++ b/src/components/Layout-Index.css
@@ -1,8 +1,7 @@
 .content {
-  margin: 0 auto;
-  max-width: 1050px;
-  padding: 0px 1.0875rem 1.45rem;
-  padding-top: 50px;
+  /*margin: 0 auto;*/
+  /*max-width: 1050px;*/
+  /*padding: 0px 1.0875rem 1.45rem;*/
   padding-bottom:130px;
   height: 100%;
   position: relative;
