--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,25 +1,42 @@
-.about-title {
-  text-align: center;
-  font-size: 3rem;
-  margin-right:30%;
-}
-
 .about-me {
    text-align: center;
    line-height: 160%;
-   margin-right: 30%;
+   flex: 1;
+}
+
+.who-is-she {
+  font-size: 4rem;
+  margin-bottom: 4rem;
+}
+
+.who-am-i {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+a:visited {
+  color: #ff5b4d;
+}
+
+.about-image {
+  flex: 1.2;
 }
 
 .profile {
-  width: 40vh;
   position: relative;
-  display: block;
-  float:right;
+  margin-bottom: 0;
+  width: 100%;
+  vertical-align: top;
 }
 
 .about-content-wrapper {
-  float:left;
-  width: calc(100% - 40vh);
+  /*float:left;*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #333;
+  color: white;
+  /*width: calc(100% - 40vh);*/
 }
 
 .about-wrapper {
@@ -114,30 +131,14 @@
 
 .connect-wrapper {
   text-align: center;
-  float: right;
-  width: 40vh;
-  margin-top: 10px;
-}
-
-.lets-connect {
-  font-size: 1.618rem;
-  color:#ff5b4d;
-  font-family: 'Lato',sans-serif;
-  font-weight: 700;
-  text-rendering: optimizeLegibility;
+  margin-top: 30px;
 }
 
 .about-me-graphics {
   height: 100%;
-  flex: 1;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   margin: 0;
-  padding-top: 5px;
-  border-radius: 6px;
   list-style:none;
+  margin-top: 4rem;
 }
 
 .about-me-graphics > a {
