--- a/src/components/About.css
+++ b/src/components/About.css
@@ -34,13 +34,11 @@ a:visited {
 }
 
 .about-content-wrapper {
-  /*float:left;*/
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #333;
   color: white;
-  /*width: calc(100% - 40vh);*/
 }
 
 .about-wrapper {
@@ -65,66 +63,20 @@ a:visited {
 }
 
 @media only screen and (max-width: 800px) {
-  .connect-wrapper {
-    width: 100%;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .about-title {
-     margin-right: 0px;
-  }
-
-  .about-me {
-     text-align: center;
-     line-height: 160%;
-     margin-right: 0px;
-  }
-  
-  .profile {
-    float:none;
-    margin-left: auto;
-    margin-right: auto;
-  }
 
   .about-content-wrapper {
-    float:none;
-    width:100%;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-}
-
-@media only screen and (max-width: 320px) {
-}
-
-/*iPad Pro*/
-@media only screen and (width: 1024px) and (height: 1366px) {
-  .about-title {
-    margin-right: 0px;
-    text-align: center;
-  }
-
-  .about-me {
-     text-align: center;
-     line-height: 160%;
-     margin-right: 0px;
-  }
-  
-  .profile {
-    float:none;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .about-content-wrapper {
-    float:none;
-    width:100%;
+    display: block;
   }
 
   .connect-wrapper {
     width: 100%;
   }
 
+  .about-me {
+    margin-top: 20px;
+  }
+
+  .who-is-she {
+    margin-bottom: 2rem;
+  }
 }
